responsiveness bug fixed(it wasn't working on iphone 6/7/8 dimention)

--- a/src/assets/css/responsive.css
+++ b/src/assets/css/responsive.css
@@ -9,7 +9,7 @@
     }
 }
 
-@media (min-width: 375.98px) and (max-width: 575.98px){
+@media (min-width: 374.98px) and (max-width: 575.98px){
     .slider-img {
          width: 100% !important;
          height: 226px;
